--- a/styles/styles.css
+++ b/styles/styles.css
@@ -239,6 +239,29 @@ img {
 .social-list-link li:not(:last-child){
   margin-right: 10px;
 }
+.mailing-form-list {
+  display: flex;
+}
+.mailing-form input {
+  width: 358px; 
+  height: 50px;
+  padding: 15px;
+  margin-right: 12px;
+
+  background-color: rgba(33, 150, 243, 0);
+  color: rgba(255, 255, 255, 0.6);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+}
+.mailing-form .button {
+  display: flex;
+  justify-content: center;
+}
+.mailing-form svg {
+  margin-left: 10px;
+  width: 24px;
+  height: 24px;
+}
 
 /* BUTTON */
 .button {
@@ -564,9 +587,11 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  
+  padding: 40px;
 
-  min-width: 528px;
-  min-height: 581px;
+  width: 528px;
+  height: 581px;
   background-color: var(--white-collor);
 }
 .botton-close {
@@ -580,3 +605,47 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
 }
+
+.botton-close:hover,
+.botton-close:focus {
+  color: var(--accent-collor);
+}
+
+/* FORM */
+.form {
+  font-size: 14px;
+  line-height: 1.71;
+  align-content: center;
+
+}
+.modal-title {
+  margin: 0;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  color: var(--title-text-collor);
+ }
+ .form-list {  
+  display: flex;  
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin-top: 12px;
+  margin-bottom: 20px;
+ }
+ .form-list input,
+ .form-list textarea {
+  display: block;
+  width: 448px;
+  height: 40px;   
+  padding: 14px; 
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+ }
+ .form-list:not(:last-child){
+  margin-bottom: 10px;
+}
+.form-list textarea {
+  resize: none;
+  height: 120px;
+ }
